@@ -123,6 +123,9 @@ See the end of the file for license conditions.
   - bug #66309: Match crashes if kdtree is not set. Found and fixed by
     Giacomo Lorenzetti.
 
+  - bug #66572: MakeProfiles continues adding pixels after truncation when
+    the profile is small (a couple of pixels), and the gradient is strong.
+
 
 
 
